# gitdocs

Backend/: pyproject.toml  test_mongo_connection.py
Backend/Arman-Shaikh58_AMNplus/: .gitignore  README.md
Backend/Arman-Shaikh58_AMNplus/Backend/: DB.py  app.py  firebase.py  requirements.txt
Backend/Arman-Shaikh58_AMNplus/Backend/Routes/: get.py  post.py
Backend/Arman-Shaikh58_AMNplus/Frontend/amnplus/: .firebaserc  README (1).md  README.md  index.html  package-lock.json  package.json
Backend/Arman-Shaikh58_AMNplus/Frontend/amnplus/.firebase/: hosting..cache
Backend/Arman-Shaikh58_AMNplus/Frontend/amnplus/src/: App.tsx  index.css  main.tsx
Backend/Arman-Shaikh58_AMNplus/Frontend/amnplus/src/components/: APIKeys.tsx  AddAPIKeys.tsx  AddPasswords.tsx  EditAPI.tsx  EditPassword.tsx  Home.tsx  Password.tsx  Profile.tsx  ProtectRoute.tsx  SignIn.tsx  SignUp.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx  team-switcher.tsx
Backend/Arman-Shaikh58_AMNplus/Frontend/amnplus/src/firebase/: firebase.tsx  (+1 more)
Backend/Arman-Shaikh58_My-Portfolio/: app.py  config.py  render.yaml  requirements.txt
Backend/Arman-Shaikh58_My-Portfolio/Frontend/static/css/: style.css
Backend/Arman-Shaikh58_My-Portfolio/Frontend/static/js/: script.js
Backend/Arman-Shaikh58_My-Portfolio/Frontend/templates/: index.html
Backend/app/: app.py
Backend/app/api/: chat.py  giturl.py
Backend/app/core/: config.py
Backend/app/db/mongoDB/: mongo.py
Backend/app/db/qdrant/: qdrant_setup.py
Backend/app/services/llm/: agent.py  llm.py  prompt.py  trial.py
Backend/app/utils/: embeddor.py
(+13 files in other folders)
